添加新的`.elf`文件格式支持，包含文档结构、解析器和核心逻辑实现。引入Weave和Tangle层API，增强文档的协作能力和版本控制。更新`.gitignore`以排除生成文件，新增`Cargo.toml`和`Makefile`以支持项目构建和文档生成。

--- a/.gitignore
+++ b/.gitignore
@@ -198,4 +198,14 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# Astro
+.astro
+
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos,linux,visualstudiocode,jetbrains+all,rust
+
+# Added by cargo
+
+/target
+
+# mdbook generated files
+/docs/book/
