更新README文档以提供更清晰的项目概述和愿景，添加新的文档结构和内容，增强对`.elf`文件格式的描述。新增文档生成工具配置，包括Cargo.toml和Justfile，支持文档构建和管理。实现了文档合并脚本和Mermaid支持，提升文档的可视化效果和交互性。

--- a/docs/book.toml
+++ b/docs/book.toml
@@ -3,3 +3,9 @@ authors = ["Allen Woods"]
 language = "en"
 src = "src"
 title = "elfi Documentation"
+
+[preprocessor.mermaid]
+command = "mdbook-mermaid"
+
+[output.html]
+additional-js = ["mermaid.min.js", "mermaid-init.js"]
