更新Cargo.toml以支持工作区结构，新增多个模块的依赖配置。同时，完善开发文档，强调TDD开发流程和贡献指南，提升新开发者的入门体验。新增ELFI开发路线图，明确项目进度和模块职责，确保开发过程的透明性和可追溯性。优化README文档，提供更清晰的开发者文档链接和项目概述，增强用户对ELFI工具的理解和使用体验。

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,73 @@
-[package]
-name = "elfi"
-version = "0.1.0"
-edition = "2024"
+[workspace]
+members = [
+    "types",
+    "parser", 
+    "core",
+    "storage",
+    "weave",
+    "tangle",
+    "recipe",
+    "cli",
+    "extension",
+]
+resolver = "2"
 
-[dependencies]
+[workspace.dependencies]
+# CRDT实现
+automerge = "0.5"
+
+# 网络层  
+zenoh = "1.5"
+
+# 异步运行时
+tokio = { version = "1.0", features = ["full"] }
+
+# 序列化
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+serde_yaml = "0.9"
+
+# 解析器
+tree-sitter = "0.25"
+
+# 错误处理
+thiserror = "1.0"
+anyhow = "1.0"
+
+# 模板引擎
+handlebars = "4.0"
+
+# 并发数据结构
+dashmap = "5.0"
+
+# 日志追踪
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+
+# HTTP客户端
+reqwest = { version = "0.11", features = ["json"] }
+
+# 文件监听
+notify = "6.0"
+
+# UUID生成
+uuid = { version = "1.0", features = ["v4", "serde"] }
+
+# 时间处理
+chrono = { version = "0.4", features = ["serde"] }
+
+# 开发依赖
+tokio-test = "0.4"
+proptest = "1.0"
+criterion = "0.4"
+
+[profile.release]
+opt-level = 3
+lto = true
+codegen-units = 1
+panic = "abort"
+
+[profile.dev]
+opt-level = 0
+debug = true
+overflow-checks = true
