更新文档：新增文档编写规范和测试范围约束
关键改进：
- 在CLAUDE.md中添加文档编写规范，明确文档类型层次和注意事项
- 在DEVELOPMENT.md中增加测试范围约束，明确禁止的测试类型和推荐的测试范围
- 更新justfile以支持API文档的自动生成和构建流程
- 新增API参考文档，提供ELFI系统的完整API参考

这些改进旨在提升文档的结构化和一致性，确保开发者在编写和测试时遵循最佳实践。

--- a/docs/justfile
+++ b/docs/justfile
@@ -7,18 +7,33 @@ install-tools:
 
 # Setup mermaid support
 setup: install-tools
+    #!/usr/bin/env bash
+    export PATH="$HOME/.cargo/bin:$PATH"
     mdbook-mermaid install .
 
 # Build the documentation
 build:
+    #!/usr/bin/env bash
+    export PATH="$HOME/.cargo/bin:$PATH"
+    mdbook build
+
+# Build with API docs integration
+build-with-api:
+    #!/usr/bin/env bash
+    export PATH="$HOME/.cargo/bin:$PATH"
+    (cd .. && cargo doc --no-deps)
     mdbook build
 
 # Serve the documentation locally with auto-reload
 serve:
+    #!/usr/bin/env bash
+    export PATH="$HOME/.cargo/bin:$PATH"
     mdbook serve --open
 
 # Clean build artifacts
 clean:
+    #!/usr/bin/env bash
+    export PATH="$HOME/.cargo/bin:$PATH"
     mdbook clean
 
 # Generate merged markdown documentation
