--- a/.github/workflows/mdbook-deploy.yml
+++ b/.github/workflows/mdbook-deploy.yml
@@ -35,10 +35,11 @@ jobs:
         run: |
           cargo install mdbook-mermaid
           cd docs
-          mdbook-mermaid install
+          mdbook-mermaid install .
 
-      - name: Build mdBook
+      - name: Build mdBook with API docs
         run: |
+          cargo doc --no-deps
           cd docs
           mdbook build
 
